--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,34 +3,41 @@ project:
   output-dir: docs
 
 website:
-  title: "NCI Gadi User Guide"
+  title: "USyd NCI Gadi User Guide"
   navbar:
     background: primary
     left:
       - href: index.qmd
         text: Home
-      - href: notebooks/gadi_access.html
+      - href: notebooks/00_gadi_access.html
         text: "Access Gadi"
-      - href: setup.html
+      - href: notebooks/01_setup.html
         text: "Set up your computer"
-      - text: "Using the workspace"
-        menu:
-        - text: "Working on Gadi"
-          href: notebooks/hpc_expectations.html
+      - text: "Introduction to Gadi"
+        menu: 
+        - text: "System offerings"
+          href: notebooks/02_system.html
+        - text: "Infrastructure expectations"
+          href: notebooks/03_expectations.html
+      - text: "Working on Gadi"
+        menu: 
+        - text: "Navigating the system"
+          href: notebooks/04_system.html
         - text: "Transferring data"
-          href: notebooks/data_transfer.html
-      - text: "Pipeline execution"
+          href: notebooks/05_data_transfer.html
+        - text: "Accounting"
+          href: notebooks/06_accounting.html
+        - text: "Specialised environments"
+          href: notebooks/07_environments.html
+      - text: "Running a job"
         menu:
-        - text: "Index reference genomes"
-          href: notebooks/index_fasta.html
-        - text: "Short reads: Quality control"
-          href: notebooks/short_qc.html
-        - text: "Short reads: Mapping and short variant calling"
-          href: notebooks/short_mapping_snps.html
-        - text: "Short reads: Structural variants"
-          href: notebooks/short_structural.html
-        - text: "nf-core pipelines"
-          href: notebooks/nfcore.html
+        - text: "Job scripts and submission"
+          href: notebooks/08_job_script.html
+        - text: "Job monitoring"
+          href: notebooks/09_job_monitoring.html
+        - text: "Resource efficiency"
+          href: notebooks/10_job_efficiency.html
+
   cookie-consent: 
     type: express
     style: simple
@@ -42,12 +49,10 @@ website:
 
 format:
   html:
-   toc: true
-   theme:
-      light: flatly
-      dark: darkly
-   css: styles.scss
-   code-link: true
-   code-fold: false
+    theme: simplex
+    css: [lesson.css, bootstrap-icons.css]
+    toc: true
+    code-overflow: wrap
+    highlight-style: github
 
 
