--- a/_quarto.yml
+++ b/_quarto.yml
@@ -49,7 +49,7 @@ website:
     policy-url: https://www.sydney.edu.au/privacy-statement.html
   google-analytics: "G-TNWWV3HK57"
 
-  body-footer: "All materials copyright Sydney Informatics Hub, University of Sydney"
+  page-footer: "All materials copyright Sydney Informatics Hub, University of Sydney"
 
 format:
   html:
