specify the site-url to identify the external links

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,7 @@ website:
     style: "docked"
     background: white
     search: true
+    site-url: https://sydney-informatics-hub.github.io/
     contents:
       - href: index.qmd
         text: Home
